%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: elkeController
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: speed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: sitting
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: chopping
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: pounding
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: throw
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: headBobble
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1101 &110100000
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110200194}
  m_TransitionDuration: 6
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: speed
    m_EventTreshold: .150000006
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110111976
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110256348}
  m_DstState: {fileID: 110227286}
  m_TransitionDuration: 6
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: speed
    m_EventTreshold: .100000001
    m_ExitTime: 0
  - m_ConditionMode: 1
    m_ConditionEvent: sitting
    m_EventTreshold: .100000001
    m_ExitTime: 0
  - m_ConditionMode: 1
    m_ConditionEvent: pounding
    m_EventTreshold: .100000001
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110112274
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200194}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .260869563
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: speed
    m_EventTreshold: .150000006
    m_ExitTime: .739130437
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110114497
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110292389}
  m_DstState: {fileID: 110289549}
  m_TransitionDuration: .206896544
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: headBobble
    m_EventTreshold: 0
    m_ExitTime: .793103456
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110118677
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110256348}
  m_DstState: {fileID: 110281039}
  m_TransitionDuration: 6
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: speed
    m_EventTreshold: .100000001
    m_ExitTime: 0
  - m_ConditionMode: 1
    m_ConditionEvent: sitting
    m_EventTreshold: .100000001
    m_ExitTime: 0
  - m_ConditionMode: 1
    m_ConditionEvent: throw
    m_EventTreshold: .100000001
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110122176
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110289549}
  m_DstState: {fileID: 110275810}
  m_TransitionDuration: 6
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: speed
    m_EventTreshold: .100000001
    m_ExitTime: 0
  - m_ConditionMode: 1
    m_ConditionEvent: sitting
    m_EventTreshold: .100000001
    m_ExitTime: 0
  - m_ConditionMode: 1
    m_ConditionEvent: pounding
    m_EventTreshold: .100000001
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110140052
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110289549}
  m_DstState: {fileID: 110270700}
  m_TransitionDuration: 6
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: speed
    m_EventTreshold: .100000001
    m_ExitTime: 0
  - m_ConditionMode: 1
    m_ConditionEvent: sitting
    m_EventTreshold: .100000001
    m_ExitTime: 0
  - m_ConditionMode: 1
    m_ConditionEvent: throw
    m_EventTreshold: .100000001
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110142058
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110212786}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: headBobble
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110143321
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110289549}
  m_TransitionDuration: 6
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: speed
    m_EventTreshold: .100000001
    m_ExitTime: 0
  - m_ConditionMode: 1
    m_ConditionEvent: sitting
    m_EventTreshold: .100000001
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110153351
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110289549}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: 6
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: sitting
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110155444
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110281039}
  m_DstState: {fileID: 110256348}
  m_TransitionDuration: .333333343
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .666666627
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110162866
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110275810}
  m_DstState: {fileID: 110289549}
  m_TransitionDuration: .299999982
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: headBobble
    m_EventTreshold: 0
    m_ExitTime: .700000048
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110166283
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110245082}
  m_DstState: {fileID: 110256348}
  m_TransitionDuration: .206896544
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .793103456
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110167273
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110256348}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: speed
    m_EventTreshold: .100000001
    m_ExitTime: .899999976
  - m_ConditionMode: 1
    m_ConditionEvent: sitting
    m_EventTreshold: .100000001
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110172420
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110289549}
  m_DstState: {fileID: 110292389}
  m_TransitionDuration: 6
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: speed
    m_EventTreshold: .100000001
    m_ExitTime: 0
  - m_ConditionMode: 1
    m_ConditionEvent: sitting
    m_EventTreshold: .100000001
    m_ExitTime: 0
  - m_ConditionMode: 1
    m_ConditionEvent: chopping
    m_EventTreshold: .100000001
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110180844
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110256348}
  m_DstState: {fileID: 110245082}
  m_TransitionDuration: 6
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: speed
    m_EventTreshold: .100000001
    m_ExitTime: 0
  - m_ConditionMode: 1
    m_ConditionEvent: sitting
    m_EventTreshold: .100000001
    m_ExitTime: 0
  - m_ConditionMode: 1
    m_ConditionEvent: chopping
    m_EventTreshold: .100000001
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110183110
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110270700}
  m_DstState: {fileID: 110289549}
  m_TransitionDuration: .333333343
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: headBobble
    m_EventTreshold: 0
    m_ExitTime: .666666627
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110199596
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110227286}
  m_DstState: {fileID: 110256348}
  m_TransitionDuration: .299999982
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .700000048
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: RigElke|elkeStillStand
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400032, guid: e94bcbbb77ea52e448926696c0d62b61, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 36, y: -48, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110200194
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: RigElke|elkeMoveWalkForward
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400020, guid: e94bcbbb77ea52e448926696c0d62b61, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 36, y: -156, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110212786
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: RigElke|royoHeadBobble
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400038, guid: e94bcbbb77ea52e448926696c0d62b61, type: 3}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 36, y: -108, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110227286
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: RigElke|elkeStillSitPound
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400028, guid: e94bcbbb77ea52e448926696c0d62b61, type: 3}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 84, y: -168, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110245082
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: RigElke|elkeStillSitChop
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400026, guid: e94bcbbb77ea52e448926696c0d62b61, type: 3}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: -132, y: -168, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110256348
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: RigElke|elkeStillSitBase
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400024, guid: e94bcbbb77ea52e448926696c0d62b61, type: 3}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 36, y: -84, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110270700
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: RigElke|elkeStillSitThrow
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400030, guid: e94bcbbb77ea52e448926696c0d62b61, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 564, y: 72, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110275810
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: RigElke|elkeStillSitPound
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400028, guid: e94bcbbb77ea52e448926696c0d62b61, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 588, y: -48, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110281039
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: RigElke|elkeStillSitThrow
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400030, guid: e94bcbbb77ea52e448926696c0d62b61, type: 3}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 312, y: -168, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110289549
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: RigElke|elkeStillSitBase
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400024, guid: e94bcbbb77ea52e448926696c0d62b61, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 312, y: -48, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110292389
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: RigElke|elkeStillSitChop
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400026, guid: e94bcbbb77ea52e448926696c0d62b61, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 564, y: -168, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110200000}
  m_States:
  - {fileID: 110200000}
  - {fileID: 110200194}
  - {fileID: 110289549}
  - {fileID: 110292389}
  - {fileID: 110275810}
  - {fileID: 110270700}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 110270700}
      second:
      - {fileID: 110183110}
    data:
      first: {fileID: 110275810}
      second:
      - {fileID: 110162866}
    data:
      first: {fileID: 110292389}
      second:
      - {fileID: 110114497}
    data:
      first: {fileID: 110289549}
      second:
      - {fileID: 110153351}
      - {fileID: 110172420}
      - {fileID: 110122176}
      - {fileID: 110140052}
    data:
      first: {fileID: 110200000}
      second:
      - {fileID: 110100000}
      - {fileID: 110143321}
    data:
      first: {fileID: 110200194}
      second:
      - {fileID: 110112274}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
